# pixman

./: .travis.yml  appveyor.yml  version.txt
android/: pixman-$(version).pom.in  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/pixman/: CMakeLists.txt  build.gradle
cocoapods/: pixman.podspec.in
msvs_solution/: msvs_solution.sln
msvs_solution/pixman/: pixman.vcxproj
nuget/: build_nuget.ps1  nuget.autopkg  nuget.autopkg.in
xcode/: Podfile
xcode/pixman/pixman.xcodeproj/: project.pbxproj
xcode/pixman/pixman.xcodeproj/project.xcworkspace/xcuserdata/ivan.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/pixman/pixman.xcodeproj/xcuserdata/ivan.xcuserdatad/xcschemes/: xcschememanagement.plist
